tests/baselines/reference/decoratorOnVar.errors.txt
decoratorOnVar.ts(3,1): error TS1206: Decorators are not valid here.


==== decoratorOnVar.ts (1 errors) ====
    declare function dec<T>(target: T): T;
    
    @dec
    ~
!!! error TS1206: Decorators are not valid here.
    var x: number;